# offline-to-do-list-manager-148807-148823

./: README.md
.knowledge/: .knowledge.json  README.md.json  native_app_build.sh.json  native_app_build_CMakeFiles_3.28.3_CMakeCCompiler.cmake.json  native_app_build_CMakeFiles_3.28.3_CMakeCXXCompiler.cmake.json  native_app_build_CMakeFiles_3.28.3_CMakeSystem.cmake.json  native_app_build_CMakeFiles_3.28.3_CompilerIdCXX_CMakeCXXCompilerId.cpp.json  native_app_build_CMakeFiles_3.28.3_CompilerIdC_CMakeCCompilerId.c.json  native_app_build_CMakeFiles_CMakeConfigureLog.yaml.json  native_app_build_CMakeFiles_CMakeDirectoryInformation.cmake.json  native_app_build_CMakeFiles_Continuous.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_Continuous.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_Continuous.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousBuild.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousBuild.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousBuild.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousConfigure.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousConfigure.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousConfigure.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousCoverage.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousCoverage.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousCoverage.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousMemCheck.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousMemCheck.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousMemCheck.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousStart.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousStart.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousStart.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousSubmit.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousSubmit.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousSubmit.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousTest.dir_DependInfo.cmake.json  native_app_build_CMakeFiles_ContinuousTest.dir_cmake_clean.cmake.json  native_app_build_CMakeFiles_ContinuousTest.dir_compiler_depend.ts.json  native_app_build_CMakeFiles_ContinuousUpdate.dir_DependInfo.cmake.json  (+320 more)
native_app/: CMakeLists.txt  build.sh  start.sh
native_app/.init/: build.sh  install.sh  scaffold.sh  setup_plan.json  start.sh  test.sh  validation.sh
native_app/src/: main.cpp
native_app/tests/: test_sample.cpp
(+1 files in other folders)
